--- a/style.css
+++ b/style.css
@@ -811,11 +811,12 @@ h1 {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center;
+  object-position: center top;
   position: relative;
   z-index: 2;
   filter: brightness(1.05) contrast(1.1);
   transition: all 0.3s ease;
+  display: block;
 }
 
 .profile-image:hover img {
